Registro agregado y modificacion de interfaz

--- a/PrestacióndeLibros/PrestacióndeLibros/PrestacióndeLibros.csproj
+++ b/PrestacióndeLibros/PrestacióndeLibros/PrestacióndeLibros.csproj
@@ -71,6 +71,7 @@
     <Content Include="Resources\StyleSheetMain.css" />
     <Content Include="Web.config" />
     <Content Include="MainPage.aspx" />
+    <Content Include="WebForm2.aspx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -80,6 +81,13 @@
     </Compile>
     <Compile Include="MainPage.aspx.designer.cs">
       <DependentUpon>MainPage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WebForm2.aspx.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WebForm2.aspx.designer.cs">
+      <DependentUpon>WebForm2.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
